--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,31 +8,26 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 96.1%; /* Light Grey */
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 120 69% 53%; /* Vibrant Green */
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
+    --background: 100 36% 37%;
+    --foreground: 0 0% 98%;
+    --card: 100 36% 37%;
+    --card-foreground: 0 0% 98%;
+    --popover: 100 36% 37%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 50 81% 60%;
+    --primary-foreground: 100 36% 37%;
+    --secondary: 50 81% 60%;
+    --secondary-foreground: 100 36% 37%;
+    --muted: 50 81% 60%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 49 93% 36%; /* Muted Gold */
-    --accent-foreground: 0 0% 9%;
+    --accent: 50 81% 60%;
+    --accent-foreground: 100 36% 37%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 1rem;
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
@@ -43,20 +38,20 @@ body {
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
-    --background: 0 0% 3.9%;
+    --background: 100 36% 37%;
     --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
+    --card: 100 36% 37%;
     --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
+    --popover: 100 36% 37%;
     --popover-foreground: 0 0% 98%;
-    --primary: 120 69% 53%; /* Vibrant Green */
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
+    --primary: 50 81% 60%;
+    --primary-foreground: 100 36% 37%;
+    --secondary: 50 81% 60%;
+    --secondary-foreground: 100 36% 37%;
+    --muted: 50 81% 60%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 49 93% 36%; /* Muted Gold */
-    --accent-foreground: 0 0% 98%;
+    --accent: 50 81% 60%;
+    --accent-foreground: 100 36% 37%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
@@ -86,4 +81,3 @@ body {
     @apply bg-background text-foreground;
   }
 }
-
