--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 @layer base {
@@ -20,7 +20,7 @@ body {
     --secondary-foreground: 100 36% 37%;
     --muted: 50 81% 60%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 50 81% 60%;
+    --accent: 48 88% 59%;
     --accent-foreground: 100 36% 37%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -50,7 +50,7 @@ body {
     --secondary-foreground: 100 36% 37%;
     --muted: 50 81% 60%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 50 81% 60%;
+    --accent: 48 88% 59%;
     --accent-foreground: 100 36% 37%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
